SONAR-14337 Do not break in the middle of words in issue comments

--- a/server/sonar-web/src/main/js/components/issue/Issue.css
+++ b/server/sonar-web/src/main/js/components/issue/Issue.css
@@ -150,7 +150,6 @@
   line-height: 1.5;
   overflow: hidden;
   outline: none;
-  word-break: break-all;
 }
 
 .issue-comment-text.markdown pre {
